--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18411,8 +18411,8 @@ CAPTION "Situaciones"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 9, 226, 12
-  CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 27, 50, 14
-  CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 226, 27, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 27, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 27, 50, 14
   CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
 }
 
@@ -19737,5 +19737,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 44, 32, 621, 288
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Información de máquinas", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
+}
+
+LHISMAQ DIALOG DISCARDABLE 9, -33, 431, 260
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Lineas de Factura"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Salir", IDOK, "Button", WS_TABSTOP, 377, 242, 50, 14
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 44, 37, 382, 200
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Histórico de máquina", -1, "Static", WS_GROUP, 44, 3, 382, 8
 }
 
