--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3798,7 +3798,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 166, 200, 321, 12
   CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 166, 213, 321, 12
   CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 166, 226, 321, 12
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 166, 238, 321, 12
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 166, 239, 321, 12
   CONTROL "", 105, "Static", WS_GROUP, 49, 125, 108, 8
   CONTROL "", 115, "Static", WS_GROUP, 49, 139, 108, 8
   CONTROL "", 125, "Static", WS_GROUP, 49, 152, 108, 8
@@ -18241,11 +18241,11 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_SYSMODAL|DS_3DLOOK|DS_CENTER|WS_CAPTION|WS_SYSME
 CAPTION "Enviar documento por correo electrónico"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 90, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 29, 308, 12
-  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 41, 308, 12
-  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 53, 308, 12
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 65, 308, 12
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 77, 294, 12
+  CONTROL "", 90, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 29, 308, 11
+  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 41, 308, 11
+  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 53, 308, 11
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 65, 308, 11
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 77, 294, 11
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 508, 322, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 562, 322, 50, 14
   CONTROL "Asunto", -1, "Static", WS_GROUP, 44, 68, 27, 8
@@ -18254,15 +18254,36 @@ FONT 8, "MS Sans Serif"
   CONTROL "Para", -1, "Static", WS_GROUP, 44, 43, 20, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 4, 34, 30
   CONTROL "Envio de documento por correo electónico", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 379, 8
-  CONTROL "", 140, "TBtnBmp", 0x00000000, 402, 77, 12, 12
-  CONTROL "", 130, "TActiveX", 0x00000000, 44, 91, 567, 226
+  CONTROL "", 140, "TBtnBmp", 0x00000000, 402, 77, 12, 11
   CONTROL "Cargar HTML", 40, "Button", WS_TABSTOP, 44, 322, 50, 14
   CONTROL "Guardar HTML", 50, "Button", WS_TABSTOP, 99, 322, 50, 14
   CONTROL "HTML actual por defecto", 60, "Button", WS_TABSTOP, 155, 322, 87, 14
   CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 450, 77, 149, 193
-  CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 77, 11, 12
+  CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 77, 12, 11
   CONTROL "Campos", -1, "Static", WS_GROUP, 417, 80, 31, 8
   CONTROL "Con copia", -1, "Static", WS_GROUP, 44, 55, 37, 8
+  CONTROL "", 620, "RichEdit20A", WS_TABSTOP|0x00a01004, 48, 119, 563, 194
+  CONTROL "", 600, "TBtnBmp", 0x00000000, 48, 104, 12, 12
+  CONTROL "", 601, "TBtnBmp", 0x00000000, 61, 104, 12, 12
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 77, 104, 12, 12
+  CONTROL "", 603, "TBtnBmp", 0x00000000, 93, 104, 12, 12
+  CONTROL "", 604, "TBtnBmp", 0x00000000, 106, 104, 12, 12
+  CONTROL "", 605, "TBtnBmp", 0x00000000, 119, 104, 12, 12
+  CONTROL "", 606, "TBtnBmp", 0x00000000, 135, 104, 12, 12
+  CONTROL "", 607, "TBtnBmp", 0x00000000, 148, 104, 12, 12
+  CONTROL "", 608, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_TABSTOP, 162, 104, 41, 68
+  CONTROL "", 609, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 205, 104, 95, 68
+  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_TABSTOP, 302, 104, 33, 68
+  CONTROL "", 611, "TBtnBmp", 0x00000000, 337, 104, 12, 12
+  CONTROL "", 612, "TBtnBmp", 0x00000000, 350, 104, 12, 12
+  CONTROL "", 613, "TBtnBmp", 0x00000000, 363, 104, 12, 12
+  CONTROL "", 614, "TBtnBmp", 0x00000000, 379, 104, 12, 12
+  CONTROL "", 615, "TBtnBmp", 0x00000000, 392, 104, 12, 12
+  CONTROL "", 616, "TBtnBmp", 0x00000000, 405, 104, 12, 12
+  CONTROL "", 617, "TBtnBmp", 0x00000000, 418, 104, 12, 12
+  CONTROL "", 618, "TBtnBmp", 0x00000000, 434, 104, 12, 12
+  CONTROL "", 619, "TBtnBmp", 0x00000000, 447, 104, 12, 12
+  CONTROL "Texto", -1, "Button", BS_GROUPBOX, 44, 94, 569, 223
 }
 
 SET_ALBARAN DIALOG DISCARDABLE 23, 40, 642, 311
