--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17663,21 +17663,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 296, 102, 136, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 225, 114, 70, 11
   CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 296, 114, 136, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 467, 30, 68, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 464, 30, 70, 11
   CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 536, 30, 126, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 467, 42, 68, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 464, 42, 70, 11
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 536, 42, 126, 11
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 467, 54, 68, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 464, 54, 70, 11
   CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 536, 54, 126, 11
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 467, 66, 68, 11
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 464, 66, 70, 11
   CONTROL "", 183, "Edit", ES_RIGHT|WS_BORDER, 536, 66, 126, 11
-  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 467, 78, 68, 11
+  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 464, 78, 70, 11
   CONTROL "", 186, "Edit", WS_BORDER|WS_TABSTOP, 536, 78, 126, 11
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 467, 90, 68, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 467, 102, 68, 11
-  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 536, 102, 126, 11
-  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 467, 114, 68, 11
-  CONTROL "", 351, "Edit", WS_BORDER, 536, 114, 110, 11
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 464, 90, 52, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 43, 130, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 130, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 130, 50, 14
@@ -17711,31 +17707,31 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 82, 42, 95, 11
   CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 82, 54, 95, 11
   CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 82, 66, 95, 11
-  CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 82, 89, 95, 186
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 82, 78, 95, 11
+  CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 82, 77, 95, 186
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 82, 90, 95, 11
   CONTROL "Impuestos incluidos", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 117, 75, 8
   CONTROL "Punto verde", 409, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 462, 328, 52, 10
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 289, 160, 61
   CONTROL "Recargo de equivalencia", 406, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 462, 346, 93, 10
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 30, 8
-  CONTROL "Estado", -1, "Static", WS_GROUP, 44, 81, 36, 8
+  CONTROL "Estado", -1, "Static", WS_GROUP, 44, 93, 36, 8
   CONTROL "Cliente", -1, "Static", WS_GROUP, 179, 33, 46, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 179, 45, 46, 8
   CONTROL "N.I.F.", -1, "Static", WS_GROUP, 179, 57, 46, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 179, 69, 46, 8
   CONTROL "CP/Población", -1, "Static", WS_GROUP, 179, 81, 46, 8
   CONTROL "Provincia", -1, "Static", WS_GROUP, 179, 93, 46, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 433, 93, 28, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 434, 93, 28, 8
   CONTROL "Precio", -1, "Static", WS_GROUP, 329, 33, 32, 8
   CONTROL "Riesgo", -1, "Static", WS_GROUP, 329, 57, 32, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 329, 93, 32, 8
   CONTROL "Tarifa per.", -1, "Static", WS_GROUP, 433, 33, 28, 8
   CONTROL "Dirección", -1, "Static", WS_GROUP, 179, 105, 46, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 179, 117, 46, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 433, 45, 28, 8
-  CONTROL "Agente", -1, "Static", WS_GROUP, 433, 57, 28, 8
-  CONTROL "%Com.", -1, "Static", WS_GROUP, 433, 69, 28, 8
-  CONTROL "Ruta", -1, "Static", WS_GROUP, 433, 81, 28, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 434, 45, 28, 8
+  CONTROL "Agente", -1, "Static", WS_GROUP, 434, 57, 28, 8
+  CONTROL "%Com.", -1, "Static", WS_GROUP, 434, 69, 28, 8
+  CONTROL "Ruta", -1, "Static", WS_GROUP, 434, 81, 28, 8
   CONTROL "%", 703, "Static", WS_GROUP, 189, 302, 8, 8
   CONTROL "%", 704, "Static", WS_GROUP, 189, 314, 8, 8
   CONTROL "%", 705, "Static", WS_GROUP, 189, 326, 8, 8
@@ -17751,14 +17747,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 89, 357, 108, 11
   CONTROL "Entrega en", 112, "Static", WS_GROUP, 44, 57, 37, 8
   CONTROL "Referencia", 123, "Static", WS_GROUP, 44, 69, 37, 8
-  CONTROL "", 201, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE|SS_RIGHTJUST, 536, 90, 16, 11
+  CONTROL "", 201, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE|SS_RIGHTJUST, 518, 90, 16, 11
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "S.A.T. de clientes", -1, "Static", WS_GROUP, 44, 4, 120, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 45, 25, 8
-  CONTROL "Situación ", -1, "Static", WS_GROUP, 44, 93, 37, 8
-  CONTROL "Operario", -1, "Static", WS_GROUP, 433, 105, 28, 8
-  CONTROL "Categoría", -1, "Static", WS_GROUP, 433, 117, 35, 8
-  CONTROL "", 352, "TBitMap", 0x00800000, 648, 114, 14, 11
+  CONTROL "Situación ", -1, "Static", WS_GROUP, 44, 81, 37, 8
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 464, 102, 70, 11
+  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 536, 102, 126, 11
+  CONTROL "Operario", -1, "Static", WS_GROUP, 434, 105, 28, 8
+  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 82, 101, 34, 12
+  CONTROL "", 351, "Edit", WS_BORDER, 118, 101, 59, 12
+  CONTROL "Categoría", -1, "Static", WS_GROUP, 44, 105, 35, 8
 }
 
 SATCLI_2 DIALOG DISCARDABLE 45, 10, 670, 375
@@ -18238,7 +18237,7 @@ FONT 8, "MS Sans Serif"
 }
 
 SENDDOCUMENTOMAIL DIALOG DISCARDABLE 113, 78, 615, 355
-STYLE WS_POPUP|DS_MODALFRAME|DS_SYSMODAL|DS_3DLOOK|DS_CENTER|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Enviar documento por correo electrónico"
 FONT 8, "MS Sans Serif"
 {
@@ -18247,7 +18246,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 53, 308, 11
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 65, 308, 11
   CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 77, 294, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 508, 322, 50, 14
+  CONTROL "", 620, "RichEdit20A", WS_TABSTOP|0x00a01004, 48, 119, 563, 194
+  CONTROL "Cargar HTML", 40, "Button", WS_TABSTOP, 44, 322, 50, 14
+  CONTROL "Guardar HTML", 50, "Button", WS_TABSTOP, 99, 322, 50, 14
+  CONTROL "HTML actual por defecto", 60, "Button", WS_TABSTOP, 155, 322, 87, 14
+  CONTROL "&Aceptar [F5]", 900, "Button", WS_TABSTOP, 508, 322, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 562, 322, 50, 14
   CONTROL "Asunto", -1, "Static", WS_GROUP, 44, 68, 27, 8
   CONTROL "Adjuntar archivo", -1, "Static", WS_GROUP, 44, 80, 57, 8
@@ -18256,14 +18259,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 4, 34, 30
   CONTROL "Envio de documento por correo electónico", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 379, 8
   CONTROL "", 140, "TBtnBmp", 0x00000000, 402, 77, 12, 11
-  CONTROL "Cargar HTML", 40, "Button", WS_TABSTOP, 44, 322, 50, 14
-  CONTROL "Guardar HTML", 50, "Button", WS_TABSTOP, 99, 322, 50, 14
-  CONTROL "HTML actual por defecto", 60, "Button", WS_TABSTOP, 155, 322, 87, 14
   CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 450, 77, 149, 193
   CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 77, 12, 11
   CONTROL "Campos", -1, "Static", WS_GROUP, 417, 80, 31, 8
   CONTROL "Con copia", -1, "Static", WS_GROUP, 44, 55, 37, 8
-  CONTROL "", 620, "RichEdit20A", WS_TABSTOP|0x00a01004, 48, 119, 563, 194
   CONTROL "", 600, "TBtnBmp", 0x00000000, 48, 104, 12, 12
   CONTROL "", 601, "TBtnBmp", 0x00000000, 61, 104, 12, 12
   CONTROL "", 602, "TBtnBmp", 0x00000000, 77, 104, 12, 12
@@ -18272,9 +18271,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 605, "TBtnBmp", 0x00000000, 119, 104, 12, 12
   CONTROL "", 606, "TBtnBmp", 0x00000000, 135, 104, 12, 12
   CONTROL "", 607, "TBtnBmp", 0x00000000, 148, 104, 12, 12
-  CONTROL "", 608, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_TABSTOP, 162, 104, 41, 68
-  CONTROL "", 609, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 205, 104, 95, 68
-  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_TABSTOP, 302, 104, 33, 68
+  CONTROL "", 608, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 162, 104, 41, 68
+  CONTROL "", 609, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL, 205, 104, 95, 68
+  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 302, 104, 33, 68
   CONTROL "", 611, "TBtnBmp", 0x00000000, 337, 104, 12, 12
   CONTROL "", 612, "TBtnBmp", 0x00000000, 350, 104, 12, 12
   CONTROL "", 613, "TBtnBmp", 0x00000000, 363, 104, 12, 12
@@ -18433,8 +18432,8 @@ CAPTION "Situaciones"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 9, 226, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 27, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 27, 50, 14
+  CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 27, 50, 14
+  CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 226, 27, 50, 14
   CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
 }
 
@@ -19759,16 +19758,5 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 44, 32, 621, 288
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Información de máquinas", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-}
-
-LHISMAQ DIALOG DISCARDABLE 9, -33, 541, 260
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Lineas de Factura"
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "Salir", IDOK, "Button", WS_TABSTOP, 485, 242, 50, 14
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 44, 37, 491, 200
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Histórico de máquina", -1, "Static", WS_GROUP, 44, 3, 382, 8
 }
 
