--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7996,7 +7996,6 @@ CAPTION "Ayuda a la entrada"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 9, 14, 409, 12
-  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 2, 37, 553, 272
   CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 438, 14, 110, 138
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 313, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 57, 313, 50, 14
@@ -8004,6 +8003,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 450, 313, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 505, 313, 50, 14
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 420, 31
+  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 3, 35, 552, 274
 }
 
 HELPENTRYBIG DIALOG DISCARDABLE 141, -5, 317, 216
@@ -19760,7 +19760,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Información de artículos por contadores y las últimas actuaciónes como S.A.T. de clientes.", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
 }
 
-
 LHISMAQ DIALOG DISCARDABLE 9, -33, 541, 264
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
@@ -19775,4 +19774,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 494, 211
 }
 
+HELPENTRYOLD DIALOG DISCARDABLE 141, -5, 560, 330
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|DS_CENTER|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Ayuda a la entrada"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 9, 14, 409, 12
+  CONTROL "", 105, "TXBrowse", WS_TABSTOP|0x00300000, 2, 37, 553, 272
+  CONTROL "", 102, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 438, 14, 110, 138
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 313, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 57, 313, 50, 14
+  CONTROL "Ordenado por", -1, "Button", BS_GROUPBOX, 433, 2, 122, 31
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 450, 313, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 505, 313, 50, 14
+  CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 420, 31
+}
 
