Stocks en compras y error en las claves de usuario

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11964,9 +11964,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 153, "Edit", WS_BORDER, 226, 102, 169, 11
   CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 181, 128, 70, 11
   CONTROL "", 331, "Edit", WS_BORDER, 253, 128, 142, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 153, 70, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 253, 153, 142, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 181, 166, 70, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 141, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 253, 141, 142, 11
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 189, 65, 12
   CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 330, 188, 65, 12
   CONTROL "Descuento", -1, "Static", WS_GROUP, 132, 81, 40, 8
@@ -11978,7 +11977,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 81, 49, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Alm. destino", -1, "Static", WS_GROUP, 132, 156, 43, 8
+  CONTROL "Alm. destino", -1, "Static", WS_GROUP, 132, 144, 43, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 184, 397, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 93, 34, 8
@@ -11993,9 +11992,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Punto verde", 172, "Static", WS_GROUP, 3, 169, 47, 8
   CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 166, 65, 11
   CONTROL "Alm. origen", 332, "Static", WS_GROUP, 132, 131, 40, 8
-  CONTROL "Stock destino", -1, "Static", WS_GROUP, 132, 169, 49, 8
-  CONTROL "", 340, "Edit", ES_RIGHT|WS_BORDER, 181, 141, 70, 11
-  CONTROL "Stock origen", 341, "Static", WS_GROUP, 132, 144, 45, 8
 }
 
 LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 261
@@ -12900,11 +12896,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 120, 40, 11
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 219, 120, 137, 11
   CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 132, 40, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 178, 155, 70, 11
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 249, 155, 106, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 178, 144, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 249, 144, 106, 11
   CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 291, 96, 65, 11
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 187, 65, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 178, 168, 70, 11
   CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 290, 187, 65, 11
   CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 99, 40, 8
   CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 111, 59, 8
@@ -12915,7 +12910,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tipo de impuesto", -1, "Static", WS_GROUP, 3, 99, 59, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 40, 60, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 28, 60, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 131, 158, 39, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 131, 147, 39, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 183, 356, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 17, 60, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 111, 34, 8
@@ -12926,7 +12921,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 311, "Static", WS_GROUP, 3, 147, 57, 8
   CONTROL "", 321, "Static", WS_GROUP, 3, 159, 57, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 123, 47, 8
-  CONTROL "Stock", -1, "Static", WS_GROUP, 131, 171, 39, 8
 }
 
 LFACPRV_2 DIALOG DISCARDABLE 26, 35, 360, 152
@@ -13125,7 +13119,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 153, "Edit", WS_BORDER, 227, 120, 169, 11
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 133, 70, 11
   CONTROL "", 241, "Edit", WS_BORDER, 253, 133, 142, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 181, 146, 70, 11
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 190, 65, 11
   CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 331, 189, 65, 11
   CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 99, 40, 8
@@ -13150,7 +13143,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 123, 47, 8
   CONTROL "Gastos suplidos", 460, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 227, 98, 63, 10
-  CONTROL "Stock", -1, "Static", WS_GROUP, 131, 149, 41, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -19788,5 +19780,59 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 450, 313, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 505, 313, 50, 14
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 420, 31
+}
+
+LPEDPRV_1 DIALOG DISCARDABLE 135, 103, 361, 204
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 65, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 224, 11
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 224, 47
+  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 14, 65, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 26, 65, 11
+  CONTROL "", 222, "Edit", WS_BORDER, 132, 26, 224, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 38, 65, 11
+  CONTROL "", 232, "Edit", WS_BORDER, 132, 38, 224, 11
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 14, 353, 80
+  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 96, 40, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 108, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 120, 65, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 132, 65, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 144, 65, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 156, 65, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 168, 65, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 96, 40, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 40, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 120, 40, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 219, 120, 137, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 132, 40, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 178, 144, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 249, 144, 106, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 291, 96, 65, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 187, 65, 11
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 290, 187, 65, 11
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 99, 40, 8
+  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 111, 59, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 190, 34, 8
+  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 123, 57, 8
+  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 3, 171, 57, 8
+  CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
+  CONTROL "Tipo de impuesto", -1, "Static", WS_GROUP, 3, 99, 59, 8
+  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 40, 60, 8
+  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 28, 60, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 131, 147, 39, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 183, 356, 1
+  CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 17, 60, 8
+  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 111, 34, 8
+  CONTROL "Rappels", -1, "Static", WS_GROUP, 131, 135, 31, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 238, 190, 49, 8
+  CONTROL "Ir a celda", 411, "Static", WS_GROUP, 238, 99, 49, 8
+  CONTROL "", 301, "Static", WS_GROUP, 3, 135, 57, 8
+  CONTROL "", 311, "Static", WS_GROUP, 3, 147, 57, 8
+  CONTROL "", 321, "Static", WS_GROUP, 3, 159, 57, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 123, 47, 8
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 156, 70, 11
+  CONTROL "Stock", -1, "Static", WS_GROUP, 131, 159, 39, 8
 }
 
