bultos en pedprv

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -13953,10 +13953,10 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Lineas de Factura"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 2, 3, 364, 233
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 205, 240, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 260, 240, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 315, 240, 50, 14
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 2, 0, 364, 232
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 205, 241, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 260, 241, 50, 14
+  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 315, 241, 50, 14
   CONTROL "TBitmap", 100, "TBitmap", 0x00000000, 387, 2, 80, 167
 }
 
@@ -19782,7 +19782,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 420, 31
 }
 
-LPEDPRV_1 DIALOG DISCARDABLE 135, 103, 361, 204
+LPEDPRV_1 DIALOG DISCARDABLE 135, 103, 361, 217
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -19796,43 +19796,47 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 232, "Edit", WS_BORDER, 132, 38, 224, 11
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 14, 353, 80
   CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 96, 40, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 108, 65, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 120, 65, 11
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 132, 65, 11
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 144, 65, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 156, 65, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 168, 65, 11
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 109, 65, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 121, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 133, 65, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 145, 65, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 157, 65, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 169, 65, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 181, 65, 11
   CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 96, 40, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 291, 96, 65, 11
   CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 40, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 291, 108, 65, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 120, 40, 11
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 219, 120, 137, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 132, 40, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 132, 178, 11
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 178, 144, 70, 11
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 249, 144, 106, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 291, 96, 65, 11
-  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 187, 65, 11
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 290, 187, 65, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 249, 144, 107, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 156, 70, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 200, 65, 11
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 290, 200, 65, 11
   CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 99, 40, 8
-  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 111, 59, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 190, 34, 8
-  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 123, 57, 8
-  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 3, 171, 57, 8
+  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 124, 59, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 203, 34, 8
+  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 136, 57, 8
+  CONTROL "Precio de compra", -1, "Static", WS_GROUP, 3, 184, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
   CONTROL "Tipo de impuesto", -1, "Static", WS_GROUP, 3, 99, 59, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 40, 60, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 28, 60, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 131, 147, 39, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 183, 356, 1
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 196, 356, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 17, 60, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 111, 34, 8
-  CONTROL "Rappels", -1, "Static", WS_GROUP, 131, 135, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 238, 190, 49, 8
+  CONTROL "Rappels", -1, "Static", WS_GROUP, 238, 111, 31, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 238, 203, 49, 8
   CONTROL "Ir a celda", 411, "Static", WS_GROUP, 238, 99, 49, 8
-  CONTROL "", 301, "Static", WS_GROUP, 3, 135, 57, 8
-  CONTROL "", 311, "Static", WS_GROUP, 3, 147, 57, 8
-  CONTROL "", 321, "Static", WS_GROUP, 3, 159, 57, 8
+  CONTROL "", 301, "Static", WS_GROUP, 3, 148, 57, 8
+  CONTROL "", 311, "Static", WS_GROUP, 3, 160, 57, 8
+  CONTROL "", 321, "Static", WS_GROUP, 3, 172, 57, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 123, 47, 8
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 156, 70, 11
   CONTROL "Stock", -1, "Static", WS_GROUP, 131, 159, 39, 8
+  CONTROL "Bultos", 421, "Static", WS_GROUP, 3, 111, 59, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 131, 136, 39, 8
 }
 
