--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5380,22 +5380,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 222, 4, 50, 14
 }
 
-DOCUMENTS_4 DIALOG DISCARDABLE 114, 30, 420, 212
-STYLE WS_CHILD|DS_3DLOOK
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 150, "TXBrowse", WS_TABSTOP|0x00300000, 2, 22, 414, 184
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 4, 50, 14
-  CONTROL "&Duplicar", 526, "Button", WS_TABSTOP, 57, 4, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 112, 4, 50, 14
-  CONTROL "&Eliminar [F4]", 507, "Button", WS_TABSTOP, 167, 4, 50, 14
-  CONTROL "De&splazar", 556, "Button", WS_TABSTOP, 222, 4, 50, 14
-  CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 288, 5, 30, 12
-  CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 333, 5, 30, 12
-  CONTROL "Fil.", -1, "Static", WS_GROUP, 278, 9, 9, 8
-  CONTROL "Col.", -1, "Static", WS_GROUP, 319, 9, 13, 8
-}
-
 DOCUMENTS_5 DIALOG DISCARDABLE 114, 30, 420, 212
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
@@ -11935,7 +11919,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 352, 226, 50, 14
 }
 
-LALBPRV_1 DIALOG DISCARDABLE 135, 103, 399, 205
+LALBPRV_1 DIALOG DISCARDABLE 135, 103, 399, 238
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -11948,50 +11932,52 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 222, "Edit", WS_BORDER, 132, 38, 264, 11
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 50, 65, 11
   CONTROL "", 232, "Edit", WS_BORDER, 132, 51, 264, 11
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 15, 393, 61
-  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 78, 38, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 90, 65, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 102, 65, 11
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 115, 65, 11
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 128, 65, 11
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 141, 65, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 153, 65, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 78, 44, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 330, 78, 65, 11
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 90, 44, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 330, 90, 65, 11
-  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 181, 102, 44, 11
-  CONTROL "", 153, "Edit", WS_BORDER, 226, 102, 169, 11
-  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 181, 128, 70, 11
-  CONTROL "", 331, "Edit", WS_BORDER, 253, 128, 142, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 141, 70, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 253, 141, 142, 11
-  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 189, 65, 12
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 330, 188, 65, 12
-  CONTROL "Descuento", -1, "Static", WS_GROUP, 132, 81, 40, 8
-  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 93, 59, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 192, 34, 8
-  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 105, 57, 8
-  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 156, 57, 8
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 15, 393, 80
+  CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 99, 38, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 124, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 137, 65, 11
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 150, 65, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 163, 65, 11
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 176, 65, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 188, 65, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 99, 44, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 111, 44, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 330, 111, 65, 11
+  CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 181, 124, 44, 11
+  CONTROL "", 153, "Edit", WS_BORDER, 226, 124, 169, 11
+  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 181, 163, 70, 11
+  CONTROL "", 331, "Edit", WS_BORDER, 253, 163, 142, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 176, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 253, 176, 142, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 221, 65, 12
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 330, 220, 65, 12
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 132, 102, 40, 8
+  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 127, 59, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 224, 34, 8
+  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 140, 57, 8
+  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 191, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
-  CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 81, 49, 8
+  CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 102, 49, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Alm. destino", -1, "Static", WS_GROUP, 132, 144, 43, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 184, 397, 1
+  CONTROL "Alm. destino", -1, "Static", WS_GROUP, 132, 179, 43, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 216, 397, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
-  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 93, 34, 8
-  CONTROL "Rappels", -1, "Static", WS_GROUP, 252, 93, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 254, 191, 49, 8
-  CONTROL "Ir a celda", 411, "Static", WS_GROUP, 252, 81, 42, 8
-  CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 118, 57, 8
-  CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 131, 57, 8
-  CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 144, 57, 8
+  CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 114, 34, 8
+  CONTROL "Rappels", -1, "Static", WS_GROUP, 252, 114, 31, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 254, 223, 49, 8
+  CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 153, 57, 8
+  CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 166, 57, 8
+  CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 179, 57, 8
   CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 132, 105, 47, 8
-  CONTROL "Punto verde", 172, "Static", WS_GROUP, 3, 169, 47, 8
-  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 166, 65, 11
-  CONTROL "Alm. origen", 332, "Static", WS_GROUP, 132, 131, 40, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 132, 127, 47, 8
+  CONTROL "Punto verde", 172, "Static", WS_GROUP, 3, 204, 47, 8
+  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 201, 65, 11
+  CONTROL "Alm. origen", 332, "Static", WS_GROUP, 132, 166, 40, 8
+  CONTROL "Bultos", 451, "Static", WS_GROUP, 3, 114, 59, 8
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 112, 65, 11
+  CONTROL "Formato", -1, "Static", WS_GROUP, 132, 138, 47, 8
+  CONTROL "", 460, "Edit", WS_BORDER, 181, 137, 214, 11
 }
 
 LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 261
@@ -19804,7 +19790,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 169, 65, 11
   CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 181, 65, 11
   CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 96, 40, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 291, 96, 65, 11
   CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 40, 11
   CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 291, 108, 65, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 120, 40, 11
@@ -19830,7 +19815,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 111, 34, 8
   CONTROL "Rappels", -1, "Static", WS_GROUP, 238, 111, 31, 8
   CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 238, 203, 49, 8
-  CONTROL "Ir a celda", 411, "Static", WS_GROUP, 238, 99, 49, 8
   CONTROL "", 301, "Static", WS_GROUP, 3, 148, 57, 8
   CONTROL "", 311, "Static", WS_GROUP, 3, 160, 57, 8
   CONTROL "", 321, "Static", WS_GROUP, 3, 172, 57, 8
@@ -19838,5 +19822,23 @@ FONT 8, "MS Sans Serif"
   CONTROL "Stock", -1, "Static", WS_GROUP, 131, 159, 39, 8
   CONTROL "Bultos", 421, "Static", WS_GROUP, 3, 111, 59, 8
   CONTROL "Formato", -1, "Static", WS_GROUP, 131, 136, 39, 8
+}
+
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+DOCUMENTS_4 DIALOG DISCARDABLE 114, 30, 420, 212
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 150, "TXBrowse", WS_TABSTOP|0x00300000, 2, 22, 414, 184
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 2, 4, 50, 14
+  CONTROL "&Duplicar", 526, "Button", WS_TABSTOP, 57, 4, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 112, 4, 50, 14
+  CONTROL "&Eliminar [F4]", 507, "Button", WS_TABSTOP, 167, 4, 50, 14
+  CONTROL "De&splazar", 556, "Button", WS_TABSTOP, 222, 4, 50, 14
+  CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 288, 5, 30, 12
+  CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 333, 5, 30, 12
+  CONTROL "Fil.", -1, "Static", WS_GROUP, 278, 9, 9, 8
+  CONTROL "Col.", -1, "Static", WS_GROUP, 319, 9, 13, 8
 }
 
