--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11907,16 +11907,16 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-LALBPRV DIALOG DISCARDABLE 9, -5, 404, 258
+LALBPRV DIALOG DISCARDABLE 9, -5, 404, 291
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Lineas de Factura"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 2, 2, 401, 220
-  CONTROL "&Series [F6]", 552, "Button", WS_TABSTOP, 2, 226, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 242, 226, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 297, 226, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 352, 226, 50, 14
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 2, 2, 401, 251
+  CONTROL "&Series [F6]", 552, "Button", WS_TABSTOP, 2, 257, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 242, 257, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 297, 257, 50, 14
+  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 352, 257, 50, 14
 }
 
 LALBPRV_1 DIALOG DISCARDABLE 135, 103, 399, 238
@@ -11934,6 +11934,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 232, "Edit", WS_BORDER, 132, 51, 264, 11
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 15, 393, 80
   CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 99, 38, 11
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 112, 65, 11
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 124, 65, 11
   CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 137, 65, 11
   CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 150, 65, 11
@@ -11945,6 +11946,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 330, 111, 65, 11
   CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 181, 124, 44, 11
   CONTROL "", 153, "Edit", WS_BORDER, 226, 124, 169, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 181, 137, 214, 11
   CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 181, 163, 70, 11
   CONTROL "", 331, "Edit", WS_BORDER, 253, 163, 142, 11
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 176, 70, 11
@@ -11975,9 +11977,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 201, 65, 11
   CONTROL "Alm. origen", 332, "Static", WS_GROUP, 132, 166, 40, 8
   CONTROL "Bultos", 451, "Static", WS_GROUP, 3, 114, 59, 8
-  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 112, 65, 11
   CONTROL "Formato", -1, "Static", WS_GROUP, 132, 138, 47, 8
-  CONTROL "", 460, "Edit", WS_BORDER, 181, 137, 214, 11
 }
 
 LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 261
@@ -13076,7 +13076,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 8, 50, 8
 }
 
-LFACPRV_7 DIALOG DISCARDABLE 135, 103, 397, 206
+LFACPRV_7 DIALOG DISCARDABLE 135, 103, 397, 231
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -13091,44 +13091,46 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 232, "Edit", WS_BORDER, 132, 51, 264, 12
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 3, 14, 393, 80
   CONTROL "", 130, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 96, 38, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 108, 65, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 120, 65, 11
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 133, 65, 11
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 146, 65, 11
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 159, 65, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 171, 65, 11
+  CONTROL "", 470, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 108, 65, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 120, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 133, 65, 11
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 146, 65, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 159, 65, 11
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 172, 65, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 184, 65, 11
   CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 96, 44, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 331, 96, 65, 11
   CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 181, 108, 44, 11
   CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 331, 108, 65, 11
   CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 181, 120, 44, 11
   CONTROL "", 153, "Edit", WS_BORDER, 227, 120, 169, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 133, 70, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 253, 133, 142, 11
-  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 190, 65, 11
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 331, 189, 65, 11
+  CONTROL "", 480, "Edit", WS_BORDER|WS_TABSTOP, 181, 133, 214, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 181, 146, 70, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 253, 146, 142, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 215, 65, 11
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 331, 214, 65, 11
   CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 99, 40, 8
-  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 111, 59, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 193, 34, 8
-  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 123, 57, 8
-  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 174, 57, 8
+  CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 124, 59, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 218, 34, 8
+  CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 136, 57, 8
+  CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 187, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
   CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 99, 49, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Almacen", -1, "Static", WS_GROUP, 131, 136, 41, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 186, 397, 1
+  CONTROL "Almacen", -1, "Static", WS_GROUP, 131, 149, 41, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 211, 397, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 111, 34, 8
   CONTROL "Rappels", -1, "Static", WS_GROUP, 296, 111, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 252, 192, 49, 8
-  CONTROL "Ir a celda", 411, "Static", WS_GROUP, 296, 99, 33, 8
-  CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 136, 57, 8
-  CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 149, 57, 8
-  CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 162, 57, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 252, 217, 49, 8
+  CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 149, 57, 8
+  CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 162, 57, 8
+  CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 175, 57, 8
   CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 123, 47, 8
   CONTROL "Gastos suplidos", 460, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 227, 98, 63, 10
+  CONTROL "Bultos", 471, "Static", WS_GROUP, 3, 111, 59, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 131, 136, 41, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
