--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19840,3 +19840,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "Formato", -1, "Static", WS_GROUP, 131, 136, 39, 8
 }
 
+XTEST DIALOGEX DISCARDABLE 6, 18, 210, 142
+STYLE DS_SHELLFONT|WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_MAXIMIZEBOX|WS_VISIBLE
+CAPTION "Dialog"
+FONT 8, "Tahoma", 0, 0, 1
+{
+  CONTROL "Cancel", IDCANCEL, "Button", WS_TABSTOP, 163, 123, 45, 15
+}
+
